--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,157 @@
-
+html {
+    scroll-behavior: smooth;
+}
+body {
+    margin: 0;
+    margin-top: 50px;
+}
+h1 {
+    font-family: 'Consolas', sans-serif;
+    font-size: 2em;
+}
+p, h2, h3, li {
+    font-family: 'Lora', serif;
+}
+nav a {
+    font-family: 'Lora', serif;
+    text-decoration: none;
+    font-size: 1em;
+    color: black;
+}
+nav {
+        width: 100%;
+        height: 50px;
+        top: 0;
+        position: fixed;
+}
+/* button styles */
+button {
+    background: #5f2b7b;
+    color: white;
+    border: none;
+    width: 225px;
+    height: 50px;
+    font-size: 1.3em;
+    font-family: 'Consolas', sans-serif;
+    font-weight: bold;
+}
+button:hover {
+    cursor: pointer;
+}
+/* Footer */
+footer img {
+    width: 350px;
+}
+footer {
+    display: flex;
+    flex-direction: column;
+}
+.backTop {
+    text-align: center;
+    background-color: #F2F2F2;
+}
+.fa-angles-up {
+    font-size: 3em;
+    color: black;
+}
+footer p {
+    text-align: center
+}
 
 /*mobile styles*/
-@media only screen and (max-width: 990px) {}
+@media only screen and (max-width: 990px) {
+    /* nav*/
+    nav {
+        background-color: #f2f2f2;
+    }
+    .nav_list {
+        display: flex;
+        flex-direction: column;
+        margin-top: 50px;
+        background-color: #f2f2f2;
+        opacity: 0;
+        transition: 0.3s;
+    }
+    nav a {
+        margin: auto;
+        padding: 5px;
+    }
+    .bar {
+        display: block;
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background-color: black;
+    }
+    .hamburger {
+        cursor: pointer;
+        display: block;
+        float: right;
+        padding: 10px;
+    }
+   .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+   }
+   .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+   }
+   .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+   }
+   .nav_list.active {
+    opacity: 1;
+    transition: 0.3s;
+   }
+   /*Footer */
+    .backTop {
+        padding-top: 50px;
+    }
+    footer img {
+        margin: 100px auto 0 auto;
+    }
+    .img_footer {
+        height: 327px;
+        text-align: center;
+    }
+}
 
 /*desktop/tablet styles*/
-@media only screen and (min-width: 991px) {}
+@media only screen and (min-width: 991px) {
+    body {
+        margin-top: 50px;
+    }
+    /* nav */
+    nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.089);
+        background-color: white;
+    }
+    nav a {
+        margin: 0 10px;
+    }
+    nav .fa-bars, nav .fa-xmark {
+        display: none;
+    }
+    .hamburger {
+        display: none;
+    }
+    /* Footer */
+    footer {
+        margin: auto;
+        align-items: center;
+        text-align: center;
+     }
+     .img_footer {
+        width: 70%;
+        background-color: white; 
+        height: 227px;
+        padding-top: 100px;
+     }
+     .backTop {
+         width: 100%;
+         padding: 50px 0 50px 0 ;
+     }
+}
