--- a/css/global.css
+++ b/css/global.css
@@ -19,11 +19,11 @@ nav a {
     color: black;
 }
 nav {
-        width: 100%;
-        height: 50px;
-        top: 0;
-        position: fixed;
-        z-index: 2;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    position: fixed;
+    z-index: 2;
 }
 /* button styles */
 button {
@@ -60,7 +60,7 @@ footer p {
 }
 
 /*mobile styles*/
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 780px) {
     /* nav*/
     nav {
         background-color: #f2f2f2;
@@ -70,12 +70,11 @@ footer p {
         flex-direction: column;
         margin-top: 50px;
         background-color: #f2f2f2;
-        opacity: 0;
-        transition: 0.3s;
+        visibility: hidden;
     }
     nav a {
         margin: auto;
-        padding: 5px;
+        padding: 10px;
     }
     .bar {
         display: block;
@@ -101,8 +100,7 @@ footer p {
     transform: translateY(-8px) rotate(-45deg);
    }
    .nav_list.active {
-    opacity: 1;
-    transition: 0.3s;
+    visibility: visible;
    }
    /*Footer */
     .backTop {
@@ -118,7 +116,7 @@ footer p {
 }
 
 /*desktop/tablet styles*/
-@media only screen and (min-width: 991px) {
+@media only screen and (min-width: 781px) {
     body {
         margin-top: 50px;
     }
