--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,9 @@ header .fa-paw {
     padding-bottom: 10px;
     margin-top: 10px;
 }
+.slideshow {
+    margin-top: 75px;
+}
 .latest_post {
     display: flex;
     flex-direction: row;
@@ -69,7 +72,7 @@ header .fa-paw {
 
     }
     .slideshow {
-        margin: auto;
+        margin: 60px auto 0 auto;
         width: 80%;
     }
     .slider {
@@ -116,5 +119,8 @@ header .fa-paw {
         float: right;
         top: -339px;
         right: -31px;
+}
+footer {
+    width: 100%;
 }
 }
