--- a/css/about.css
+++ b/css/about.css
@@ -17,6 +17,9 @@
 .profile ul {
     padding-left: 0;
 }
+.about_me_container {
+    width: 100%;
+}
 .fa-bone {
     font-size: 1.5em;
     margin: 0 20px;
@@ -57,8 +60,11 @@ hr {
         padding-top: 75px;
     }
     .description div{
-        width: 50%;
+        width: 100%;
         max-width: 340px;
+    }
+    .description {
+        gap: 100px;
     }
     .profile .bones {
         margin: 0;
