--- a/css/specificblog.css
+++ b/css/specificblog.css
@@ -25,7 +25,6 @@ main p {
     border-left: 5px solid #5f2b7b;
     padding-left: 30px;
 }
-
 textarea {
     width: 100%;
     border: 4px double #5f2b7b;
@@ -46,6 +45,10 @@ textarea {
 }
 .comment-form {
     margin-top: 50px;
+}
+.button {
+    text-align: center; 
+    margin-top: 10px;
 }
 
 /*mobile styles*/
