--- a/css/bloglist.css
+++ b/css/bloglist.css
@@ -5,19 +5,6 @@
     width: 250px;
     margin: 0 auto 30px auto;
 }
-.blogList {
-    width: 80%;
-    text-align: center;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
-    justify-content: center;    
-}
-.blogContainer {
-    width: 270px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.288);
-}
 .search {
     text-align: center;
     margin: 100px auto 50px auto;
@@ -34,6 +21,25 @@ input {
 input:focus, textarea:focus {
     outline: none;
     border: 2px solid #5f2b7b;
+}
+.blogList {
+    width: 80%;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+    justify-content: center;    
+}
+.blogContainer {
+    width: 270px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.288);
+}
+.blogContainer h3  {
+    margin: 10px 0 15px 0;
+}
+.blogContainer p {
+    margin: 10px 0 0 0;
 }
 .more {
     text-align: center;
