--- a/css/specificblog.css
+++ b/css/specificblog.css
@@ -12,6 +12,33 @@ main p {
 .date {
     text-align: center;
 }
+.modal_function {
+    position: fixed;
+    width: 100%;
+    height: 194%;
+    z-index: 1;
+    background-color: rgba(0,0,0,0.9);
+    overflow: auto;
+    transition: all 0.5s;
+}
+.modal_function:hover {
+    cursor: pointer;
+}
+.image_big {
+    z-index: 2;
+    position: fixed;
+}
+.cross {
+    display: none;
+    color: white;
+    font-size: 2em;
+    font-family: 'Consolas', sans-serif;
+    padding: 0.6em;
+    position: absolute;
+}
+.cross:hover {
+    cursor: pointer;
+}
 /* Comment section*/
 .comments_container {
     order: 4;
@@ -57,10 +84,12 @@ textarea {
     }
     main img {
         width: 100%;
-        transition: all 0.5s ease;
     }
-    .image {
-        width: 70%;
+    .image_big {
+        width: 75%;
+    }
+    .cross {
+        right: -4px;
     }
     .comments div {
         margin-left: 0;
@@ -79,6 +108,9 @@ textarea {
         cursor: pointer;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.24);
         transition: all 2s ease;
+    }
+    .cross {
+        right: 5px;
     }
     .comments_container {
         width: 70%;
