--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,8 @@ header .fa-paw {
 }
 .slogan {
     text-align: center;
-    margin-bottom: 90px;
+    margin-bottom: 110px;
+    margin-top: 35px;
 }
 .fa-bone {
     font-size: 1.5em;
