--- a/css/specificblog.css
+++ b/css/specificblog.css
@@ -58,6 +58,8 @@ textarea {
     padding: 10px 5px;
     margin: 50px 0 0 30px;
     font-size: 1em;
+    font-family: 'Lora', serif;
+    line-height: 1.5;
 }
 .comments p {
     margin-top: 5px;
